<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_cadpropriedade"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_cadpropriedade" />
        <item
            android:id="@+id/nav_custom"
            android:icon="@drawable/ic_baseline_supervised_user_circle_24"
            android:title="@string/menu_custom" />
        <item
            android:id="@+id/nav_viewpropriedade"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/menu_viewpropriedade" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/menu_logout" />
    </group>
</menu>